--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./public/css/portfolio.css">
-    <script src="./public//js/navbar.js" defer></script>
+    <link rel="stylesheet" href="./public/css/style.css">
+    <script src="./public/js/navbar.js" defer></script>
+    <script src="./public/js/contact.js" defer></script>
     <title>Ulises Armolla</title>
 </head>
 <body>
@@ -41,7 +42,7 @@
 
     <header class="homeContainer" id="home">
         <div class="textContainer">
-            <h1 class="titlePortfolio">Hola, Soy Ulises</h1>
+            <h1 class="titlePortfolio">Hola, Soy Ulises!</h1>
             <p class="subtitle">Freelancer Fullstack</p>
             <a class="btnContact" href="#contact">Contactame</a>
         </div>
@@ -55,7 +56,7 @@
     <section class="profileContainer" id="profile">
         <div class="imgContainer">
             <h2 class="titlePortfolio">Mí Perfil</h2>
-            <img class="imgBanner" src="./public/images/home/1.png" alt="imagen principal">
+            <img class="imgBanner" src="./public/images/home/1.png" alt="imagen de mi perfil">
         </div>
         <div class="textContainer">
             <p class="infoProfile">
@@ -184,10 +185,15 @@
         </div>
         <form class="contactForm" action="" method="post">
             <input class="inputContact" type="text" name="name" id="" placeholder="Nombre">
+            <span class="errorMsg"></span>
             <input class="inputContact" type="text" name="email" id="" placeholder="Mail">
+            <span class="errorMsg"></span>
             <input class="inputContact" type="text" name="phone" id="" placeholder="Teléfono">
+            <span class="errorMsg"></span>
             <input class="inputContact" type="text" name="subject" id="" placeholder="Asunto">
-            <textarea class="msgContact" name="message" id="" cols="30" rows="10" placeholder="Tú mensaje"></textarea>
+            <span class="errorMsg"></span>
+            <textarea class="inputContact" name="message" id="" cols="30" rows="10" placeholder="Tú mensaje"></textarea>
+            <span class="errorMsg"></span>
             <button class="btnContact" type="submit">Enviar mensaje</button>
         </form>
     </section>
