Agrego nuevas validaciones al contact form y un modal con mesaje de error

--- a/index.html
+++ b/index.html
@@ -11,205 +11,216 @@
     <title>Ulises Armolla</title>
 </head>
 <body>
+    <div style="width: 100vw;" id="app">
+        <!-- Barra de navegación. -->
 
-    <!-- Barra de navegación. -->
+        <nav class="mainNav">
+            <div class="logo"><a href="#home"><p class="fontLogo">ulises</p></a></div>
 
-    <nav class="mainNav">
-        <div class="logo"><a href="#home"><p class="fontLogo">ulises</p></a></div>
+            <!-- Menú hamburguesa. -->
 
-        <!-- Menú hamburguesa. -->
-
-        <div class="buttonBars">
-            <span class="topBar"></span>
-            <span class="middleBar"></span>
-            <span class="bottomBar"></span>
-        </div>
-
-        <!-- Menú desplegable en vista mobile. -->
-
-        <div class="menu">
-            <ul class="listMenu">   
-                <li class="itemMenu"><a class="linkMenu" href="#profile">Perfil</a></li>
-                <li class="itemMenu"><a class="linkMenu" href="#tec">Tecnologías</a></li>
-                <li class="itemMenu"><a class="linkMenu" href="#habilitys">Habilidades</a></li>
-                <li class="itemMenu"><a class="linkMenu" href="#contact">Contacto</a></li>
-                <li class="itemMenu"><a class="linkMenu" href="#footer">Redes</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Vista principal del portfolio. -->
-
-    <header class="homeContainer" id="home">
-        <div class="textContainer">
-            <h1 class="titlePortfolio">Hola, Soy Ulises!</h1>
-            <p class="subtitle">Freelancer Fullstack</p>
-            <a class="btnContact" href="#contact">Contactame</a>
-        </div>
-        <div class="imgContainer">
-            <img class="imgBanner" src="./public/images/home/2.png" alt="imagen principal">
-        </div>
-    </header>
-
-    <!-- Perfil del portfolio. -->
-
-    <section class="profileContainer" id="profile">
-        <div class="imgContainer">
-            <h2 class="titlePortfolio">Mí Perfil</h2>
-            <img class="imgBanner" src="./public/images/home/1.png" alt="imagen de mi perfil">
-        </div>
-        <div class="textContainer">
-            <p class="infoProfile">
-                Soy un desarrollador Fullstack versátil y equilibrado, con una base sólida 
-                en lógica de programación y buenas prácticas. Me destaco por mi código prolijo
-                y ordenado, hábito que adquirí trabajando con el paradigma orientado a objetos.
-                Mis fortalezas están en el backend donde me gusta encontrar soluciones bien funcionales
-                ante los diversos problemas y desafíos. Disfruto trabajar en equipo y desempeñar
-                roles diferentes donde siempre dejo mi impronta.
-            </p>
-            <a class="btnContact" download="CV-Ulises" href="./public/cv/CV - Ulises Armolla.pdf">
-                Descargar CV
-            </a>
-        </div>
-    </section>
-
-    <!-- Íconos de los lenguajes de programación. -->
-
-    <section class="tecContainer" id="tec">
-        <div class="textContainer">
-            <h3 class="tecTitle">Tecnologías que uso</h3>
-        </div>
-        <div class="iconsContainer">
-            <div class="tecIcons1">
-                <img class="tecImg" src="./public/images/icons/html5.png" alt="imagen principal">
-                <img class="tecImg" src="./public/images/icons/css3.png" alt="imagen principal">
-                <img class="tecImg" src="./public/images/icons/js.png" alt="imagen principal">
-                <img class="tecImg" src="./public/images/icons/php.png" alt="imagen principal">
+            <div class="buttonBars">
+                <span class="topBar"></span>
+                <span class="middleBar"></span>
+                <span class="bottomBar"></span>
             </div>
-            <div class="tecIcons2">
-                <img class="tecImg" src="./public/images/icons/mysql.png" alt="imagen principal">
-                <img class="tecImg" src="./public/images/icons/git.png" alt="imagen principal">
-                <img class="tecImg" src="./public/images/icons/boot.png" alt="imagen principal">
-                <img class="tecImg" src="./public/images/icons/node.png" alt="imagen principal">
+
+            <!-- Menú desplegable en vista mobile. -->
+
+            <div class="menu">
+                <ul class="listMenu">   
+                    <li class="itemMenu"><a class="linkMenu" href="#profile">Perfil</a></li>
+                    <li class="itemMenu"><a class="linkMenu" href="#tec">Tecnologías</a></li>
+                    <li class="itemMenu"><a class="linkMenu" href="#abilities">Habilidades</a></li>
+                    <li class="itemMenu"><a class="linkMenu" href="#contact">Contacto</a></li>
+                    <li class="itemMenu"><a class="linkMenu" href="#footer">Redes</a></li>
+                </ul>
             </div>
-        </div>
-    </section>
+        </nav>
 
-    <!-- Barras de progreso de habilidades. -->
+        <!-- Vista principal del portfolio. -->
 
-    <section class="skillsContainer" id="habilitys">
-        <div class="textContainer">
-            <h4 class="habilitysTitle">Mís habilidades</h4>
-        </div>
-        <div class="languajesContainer">
-            <div class="skills">
-                <div class="languajes">
-                    <span>HTML</span>
-                    <span>75%</span>
+        <header class="homeContainer" id="home">
+            <div class="textContainer">
+                <h1 class="titlePortfolio">Hola, Soy Ulises!</h1>
+                <p class="subtitle">Freelancer Fullstack</p>
+                <a class="btnContact" href="#contact">Contactame</a>
+            </div>
+            <div class="imgContainer">
+                <img class="imgBanner" src="./public/images/home/2.png" alt="imagen principal">
+            </div>
+        </header>
+
+        <!-- Perfil del portfolio. -->
+
+        <section class="profileContainer" id="profile">
+            <div class="imgContainer">
+                <h2 class="titlePortfolio">Mí Perfil</h2>
+                <img class="imgBanner" src="./public/images/home/1.png" alt="imagen de mi perfil">
+            </div>
+            <div class="textContainer">
+                <p class="infoProfile">
+                    Soy un desarrollador Fullstack versátil y equilibrado, con una base sólida 
+                    en lógica de programación y buenas prácticas. Me destaco por mi código prolijo
+                    y ordenado, hábito que adquirí trabajando con el paradigma orientado a objetos.
+                    Mis fortalezas están en el backend donde me gusta encontrar soluciones bien funcionales
+                    ante los diversos problemas y desafíos. Disfruto trabajar en equipo y desempeñar
+                    roles diferentes donde siempre dejo mi impronta.
+                </p>
+                <a class="btnContact" download="CV-Ulises" href="./public/cv/CV - Ulises Armolla.pdf">
+                    Descargar CV
+                </a>
+            </div>
+        </section>
+
+        <!-- Íconos de los lenguajes de programación. -->
+
+        <section class="tecContainer" id="tec">
+            <div class="textContainer">
+                <h3 class="tecTitle">Tecnologías que uso</h3>
+            </div>
+            <div class="iconsContainer">
+                <div class="tecIcons1">
+                    <img class="tecImg" src="./public/images/icons/html5.png" alt="imagen principal">
+                    <img class="tecImg" src="./public/images/icons/css3.png" alt="imagen principal">
+                    <img class="tecImg" src="./public/images/icons/js.png" alt="imagen principal">
+                    <img class="tecImg" src="./public/images/icons/php.png" alt="imagen principal">
                 </div>
-                <div class="progressBar">
-                    <div id="htmlBar"></div>
+                <div class="tecIcons2">
+                    <img class="tecImg" src="./public/images/icons/mysql.png" alt="imagen principal">
+                    <img class="tecImg" src="./public/images/icons/git.png" alt="imagen principal">
+                    <img class="tecImg" src="./public/images/icons/boot.png" alt="imagen principal">
+                    <img class="tecImg" src="./public/images/icons/node.png" alt="imagen principal">
                 </div>
             </div>
-            <div class="skills">
-                <div class="languajes">
-                    <span>CSS</span>
-                    <span>60%</span>
-                </div>
-                <div class="progressBar">
-                    <div id="cssBar"></div>
-                </div>
-            </div>
-            <div class="skills">
-                <div class="languajes">
-                    <span>JS</span>
-                    <span>80%</span>
-                </div>
-                <div class="progressBar">
-                    <div id="jsBar"></div>
-                </div>
-            </div>
-            <div class="skills">
-                <div class="languajes">
-                    <span>PHP</span>
-                    <span>80%</span>
-                </div>
-                <div class="progressBar">
-                    <div id="phpBar"></div>
-                </div>
-            </div>
-            <div class="skills">
-                <div class="languajes">
-                    <span>MYSQL</span>
-                    <span>80%</span>
-                </div>
-                <div class="progressBar">
-                    <div id="mysqlBar"></div>
-                </div>
-            </div>
-            <div class="skills">
-                <div class="languajes">
-                    <span>GIT</span>
-                    <span>70%</span>
-                </div>
-                <div class="progressBar">
-                    <div id="gitBar"></div>
-                </div>
-            </div>
-            <div class="skills">
-                <div class="languajes">
-                    <span>BOOTSTRAP</span>
-                    <span>55%</span>
-                </div>
-                <div class="progressBar">
-                    <div id="bootBar"></div>
-                </div>
-            </div>
-            <div class="skills">
-                <div class="languajes">
-                    <span>NODE JS</span>
-                    <span>85%</span>
-                </div>
-                <div class="progressBar">
-                    <div id="nodejsBar"></div>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Formulario de contacto. -->
+        <!-- Barras de progreso de habilidades. -->
 
-    <section class="contactContainer" id="contact">
-        <div class="textContainer">
-            <h5 class="contactTitle">Contactame</h5>
-        </div>
-        <form class="contactForm" action="" method="post">
-            <input class="inputContact" type="text" name="name" id="" placeholder="Nombre">
-            <span class="errorMsg"></span>
-            <input class="inputContact" type="text" name="email" id="" placeholder="Mail">
-            <span class="errorMsg"></span>
-            <input class="inputContact" type="text" name="phone" id="" placeholder="Teléfono">
-            <span class="errorMsg"></span>
-            <input class="inputContact" type="text" name="subject" id="" placeholder="Asunto">
-            <span class="errorMsg"></span>
-            <textarea class="inputContact" name="message" id="" cols="30" rows="10" placeholder="Tú mensaje"></textarea>
-            <span class="errorMsg"></span>
-            <button class="btnContact" type="submit">Enviar mensaje</button>
-        </form>
-    </section>
-
-    <!-- Footer con las redes sociales. -->
-
-    <footer class="networksContainer" id="footer">
-        <div class="networks">
-            <div class="logoFooter"><a href="#home"><p class="fontLogoFooter">ulises</p></a></div>
-            <div class="linksContainer">
-                <a class="linkNetwork" href="https://www.linkedin.com/in/ulisesarmolla/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a class="linkNetwork" href="https://github.com/armolla" target="_blank"><i class="fab fa-github"></i></a>
-                <a class="linkNetwork" href="https://www.facebook.com/ulises.armolla" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <section class="skillsContainer" id="abilities">
+            <div class="textContainer">
+                <h4 class="abilitiesTitle">Mís habilidades</h4>
             </div>
-        </div>
-        <span class="copy">Copyright © 2022 Ulises Armolla. All rights reserved.</span>
-    </footer>
+            <div class="languajesContainer">
+                <div class="skills">
+                    <div class="languajes">
+                        <span>HTML</span>
+                        <span>75%</span>
+                    </div>
+                    <div class="progressBar">
+                        <div id="htmlBar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="languajes">
+                        <span>CSS</span>
+                        <span>60%</span>
+                    </div>
+                    <div class="progressBar">
+                        <div id="cssBar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="languajes">
+                        <span>JS</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="progressBar">
+                        <div id="jsBar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="languajes">
+                        <span>PHP</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="progressBar">
+                        <div id="phpBar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="languajes">
+                        <span>MYSQL</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="progressBar">
+                        <div id="mysqlBar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="languajes">
+                        <span>GIT</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="progressBar">
+                        <div id="gitBar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="languajes">
+                        <span>BOOTSTRAP</span>
+                        <span>55%</span>
+                    </div>
+                    <div class="progressBar">
+                        <div id="bootBar"></div>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="languajes">
+                        <span>NODE JS</span>
+                        <span>85%</span>
+                    </div>
+                    <div class="progressBar">
+                        <div id="nodejsBar"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Formulario de contacto. -->
+
+        <section class="contactContainer" id="contact">
+            <div class="textContainer">
+                <h5 class="contactTitle">Contactame</h5>
+            </div>
+            <form class="contactForm" autocomplete="off" action="" method="post">
+                <input class="inputContact" type="text" name="name" id="" placeholder="Nombre">
+                <span class="msg"></span>
+                <input class="inputContact" type="text" name="email" id="" placeholder="Mail">
+                <span class="msg"></span>
+                <input class="inputContact" type="text" name="phone" id="" placeholder="Teléfono">
+                <span class="msg"></span>
+                <input class="inputContact" type="text" name="subject" id="" placeholder="Asunto">
+                <span class="msg"></span>
+                <textarea class="inputContact" name="message" id="" cols="30" rows="10" placeholder="Tú mensaje"></textarea>
+                <span class="msg"></span>
+                <button class="btnContact" type="submit">Enviar mensaje</button>
+            </form>
+            <div class="errorContainer">
+                <img class="errorImg" src="./public/images/home/error.png" alt="imagen cara enojada por error">
+                <div class="msgContainer">
+                    <p class="msgModal">
+                        Al parecer algún dato no es correcto...<br/>
+                        Por favor verifica los campos que contienen indicaciones que te pueden ayudar.
+                    </p>
+                    <div class="close"><i class="fas fa-times"></i></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer con las redes sociales. -->
+
+        <footer class="networksContainer" id="footer">
+            <div class="networks">
+                <div class="logoFooter"><a href="#home"><p class="fontLogoFooter">ulises</p></a></div>
+                <div class="linksContainer">
+                    <a class="linkNetwork" href="https://www.linkedin.com/in/ulisesarmolla/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="linkNetwork" href="https://github.com/armolla" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="linkNetwork" href="https://www.facebook.com/ulises.armolla" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                </div>
+            </div>
+            <span class="copy">Copyright © 2022 Ulises Armolla. All rights reserved.</span>
+        </footer>
+    </div>
 </body>
 </html>
