Agrego nueva seccion de proyectos, maquetacion y estilos

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li class="itemMenu"><a class="linkMenu" href="#profile">Perfil</a></li>
                     <li class="itemMenu"><a class="linkMenu" href="#tec">Tecnologías</a></li>
                     <li class="itemMenu"><a class="linkMenu" href="#abilities">Habilidades</a></li>
+                    <li class="itemMenu"><a class="linkMenu" href="#projects">Proyectos</a></li>
                     <li class="itemMenu"><a class="linkMenu" href="#contact">Contacto</a></li>
                     <li class="itemMenu"><a class="linkMenu" href="#footer">Redes</a></li>
                 </ul>
@@ -177,11 +178,29 @@
             </div>
         </section>
 
+        <!-- Proyectos -->
+
+        <section class="projectsContainer" id="projects">
+            <div class="textContainer">
+                <h5 class="projectTitle">Proyectos</h5>
+            </div>
+            <div>
+                <a href="https://armolla.github.io/flip/" target="_blank">
+                    <img 
+                        class="imageProject" 
+                        src="./public/images/home/flip.png" 
+                        alt="Imagen proyecto Flip"
+                    />
+                </a>
+                <p class="projectsDescription">Juego en navegador de memoria visual</p>
+            </div>
+        </section>
+
         <!-- Formulario de contacto. -->
 
         <section class="contactContainer" id="contact">
             <div class="textContainer">
-                <h5 class="contactTitle">Contactame</h5>
+                <h6 class="contactTitle">Contactame</h5>
             </div>
             <form class="contactForm" autocomplete="off" action="" method="post">
                 <input class="inputContact" type="text" name="name" id="" placeholder="Nombre">
