Agrego maquetacion estilos e imagen en la seccion proyectos

--- a/index.html
+++ b/index.html
@@ -184,15 +184,27 @@
             <div class="textContainer">
                 <h5 class="projectTitle">Proyectos</h5>
             </div>
-            <div>
-                <a href="https://armolla.github.io/flip/" target="_blank">
-                    <img 
-                        class="imageProject" 
-                        src="./public/images/home/flip.png" 
-                        alt="Imagen proyecto Flip"
-                    />
-                </a>
-                <p class="projectsDescription">Juego en navegador de memoria visual</p>
+            <div class="projectsLinks">
+                <div class="link">
+                    <a href="https://armolla.github.io/flip/" target="_blank">
+                        <img 
+                            class="imageProject" 
+                            src="./public/images/home/flip.png" 
+                            alt="Imagen proyecto Flip"
+                        />
+                    </a>
+                    <p class="projectsDescription">Juego en navegador de memoria visual</p>
+                </div>
+                <div class="link">
+                    <a href="https://armolla.github.io/retrogamer/" target="_blank">
+                        <img 
+                            class="imageProject" 
+                            src="./public/images/home/retro.png" 
+                            alt="Imagen proyecto Retro Gamer"
+                        />
+                    </a>
+                    <p class="projectsDescription">E-commerce de consolas retro</p>
+                </div>    
             </div>
         </section>
 
